--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .box{
   width: 50%;
+  height: auto;
   background-color: #142d4c;
   color: white;
   padding: 20px;
@@ -24,6 +25,8 @@
   flex-wrap: wrap;
   gap: 20px;
   margin: 20px;
+  width: 100vw;
+  height: 100vh;
 }
 .point{
   display: flex;
